--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 　　<html>
 　　<head>
-　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-　　　　<title>{{ page.title }}</title>
+	<meta charset="utf-8">
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<meta content="en" http-equiv="Content-Language">
+	<meta content="width=1020" name="viewport">
+	<link rel="stylesheet" media="all" href="./stylesheets/stylesheet.css">
+	<link rel="stylesheet" media="all" href="./stylesheets/markdown.css">
+	<link rel="stylesheet" media="all" href="./stylesheets/syntax.css">
+　　　　	<title>{{ page.title }}</title>
 　　</head>
 　　<body>
-　　　　{{ content }}
+　　　　	<div class="container group">
+		{% include sidebar.html %}
+
+		<div class="content">
+		      	{{ content }}
+		</div>
+
+	</div>
+
+	{% include footer.html %}
+
 　　</body>
 　　</html>
