--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" media="all" href="./stylesheets/stylesheet.css">
 	<link rel="stylesheet" media="all" href="./stylesheets/markdown.css">
 	<link rel="stylesheet" media="all" href="./stylesheets/syntax.css">
+	<link rel="stylesheet" media="all" href="./stylesheets/style.css">
 　　　　	<title>{{ page.title }}</title>
 　　</head>
 　　<body>
