--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="all" />
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./stylesheets/style.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <!--[if (lt IE 9) & (!IEMobile)]>
     <link rel="stylesheet" type="text/css" href="/css/ie.css" />
