--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -70,5 +70,5 @@
 @media all and (min-width:640px) {
   div.container {display: table;}
   div.sidenav                 { background:#f6f6f6; padding:100px 5%; display: table-cell; width:30%;}
-  div.content                 { display: table-cell; }
+  div.content                 { padding:20px 10%; display: table-cell; }
 }
