--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,5 @@
-<p class="copyright">&copy; 2015&#8201;&ndash;&#8201;2016 LiinNs. Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and host by <a href="https://github.com/LiinNs">Github @LiinNs </a>。
+<p class="copyright">&copy; 2015&#8201;&ndash;&#8201;2016 LiinNs. 
+Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and 
+host by <a href="https://github.com/LiinNs">Github @LiinNs </a>.
+<a href="/about/">About me.</a>
 </p>
