修改根目录跳转连接

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,7 +17,7 @@
 <body>
 
 <div class="single-post">
-    <span class="post-meta"><a href="{{ site.url}}">{{ site.author }}</a></span>
+    <span class="post-meta"><a href="/">{{ site.author }}</a></span>
 
     {{ content }}
 </div>
