--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,12 @@
-<p class="copyright">&copy; 2015&#8201;&ndash;&#8201;2016 LiinNs. 
-Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and 
-host by <a href="https://github.com/LiinNs">Github @LiinNs </a>.
-<a href="/about/">About me.</a>
-</p>
+<div class="footer">
+    <div class="columns">
+        <div class="column">c1 about me!</div>
+        <div class="column">c2 pic of me!</div>
+        <div class="column">c3 follow me!</div>
+    </div>
+    <p class="copyright">&copy; 2015&#8201;&ndash;&#8201;2016 LiinNs. 
+    Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and 
+    host by <a href="https://github.com/LiinNs">Github @LiinNs </a>.
+    <a href="/about/">About me.</a>
+    </p>
+</div>
