--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,15 +1,9 @@
-
-  <div class="sidenav">
-      <h1>林乃胜，开发设计师。
-      </h1>
-      <nav>
-        <ul>
-        <li>
-            <a href="/">首页</a>
-        </li>
-        <li>
-            <a href="/about/">关于我</a>
-        </li>
-        </ul>
-      </nav>
-  </div><!-- .sidenav -->
+<div class="sidebar">
+  <h1>林乃胜，开发工程师。</h1>
+  <nav>
+    <ul>
+        <li><a href="/">首页</a></li>
+        <li><a href="/about/">关于我</a></li>
+    </ul>
+  </nav>
+</div><!-- .sidenav -->
