--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,17 @@
     <link rel="stylesheet" media="all" href="./stylesheets/style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 </head>
-<body class="container">
+<body>
+    <div class="container">
+        {% include header.html %}
 
-    <div class="content markdown-body">
-      	{{ content }}
+        {% include sidebar.html %}
+
+        <div class="content">
+          	{{ content }}
+        </div>
+
+        {% include footer.html %}
     </div>
-
-    {% include footer.html %}
-
 </body>
 </html>
