--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,13 +12,15 @@
     <link rel="stylesheet" media="all" href="/stylesheets/style.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 </head>
-<body class="container">
+<body>
+    <div class="container">
+        {% include sidebar.html %}
 
-    <div class="content markdown-body">
-        {{ content }}
+        <div class="markdown-body">
+          	{{ content }}
+        </div>
+
+        {% include footer.html %}
     </div>
-
-    {% include footer.html %}
-
 </body>
 </html>
