修改布局样式

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<footer>
     <div class="columns">
         <div class="column">c1 about me!</div>
         <div class="column">c2 pic of me!</div>
@@ -9,4 +9,4 @@
     host by <a href="https://github.com/LiinNs">Github @LiinNs </a>.
     <a href="/about/">About me.</a>
     </p>
-</div>
+</footer>
