--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
         {% include sidebar.html %}
 
-        <div class="content">
+        <div class="content markdown-body">
           	{{ content }}
         </div>
 
