--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="robots" content="all" />
+    <meta charset="utf-8">
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<meta content="en" http-equiv="Content-Language">
+	<meta content="width=1020" name="viewport">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" media="all" href="/stylesheets/stylesheet.css">
     <link rel="stylesheet" media="all" href="/stylesheets/markdown.css">
     <link rel="stylesheet" media="all" href="/stylesheets/syntax.css">
     <link rel="stylesheet" media="all" href="/stylesheets/style.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <!--[if (lt IE 9) & (!IEMobile)]>
-    <link rel="stylesheet" type="text/css" href="/css/ie.css" />
-    <![endif]-->
 </head>
 <body>
 
 <div class="single-post">
     <span class="post-meta"><a href="/">{{ site.author }}</a></span>
-
     {{ content }}
 </div>
 
