footer区域定稿设计

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,19 @@
 <footer>
     <div class="columns">
-        <div class="column">c1 about me!</div>
-        <div class="column">c2 pic of me!</div>
-        <div class="column">c3 follow me!</div>
+        <div class="column"><p>我是LiinNs，一个奔三的光棍，一个极度无聊的89后。他自以为很帅，事实却不如意，他自以为明骚，朋友们都说他闷骚，他是个认真起来银河系都静止的男人，看破红尘却遁不入空门佛门的BUG。</p></div>
+        <div class="column">
+            <div class="cycle">
+                <a href="/"><img src="/favicon.jpg" title="LiinNs" alt="这是只大型猫科动物！" /></a>
+            </div>
+        </div>
+        <div class="column">
+            <address>
+                <a href="http://weibo.com/Hjax"><img src="" title="这是我的围脖" alt="围脖" /></a><br />
+                <a href="mailto:876056609@qq.com"><img src="" title="这是我的企鹅邮箱" alt="邮箱" /></a><br />
+                蔻蔻:876056609<br />
+                住址:海南省 海口市 美兰区 国兴大道 卧铺！！！
+            </address>
+        </div>
     </div>
     <p class="copyright">&copy; 2015&#8201;&ndash;&#8201;2016 LiinNs. 
     Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and 
