--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 <footer>
+    <div class="footer">
     <div class="columns">
-        <div class="column"><p>我是LiinNs，一个奔三的光棍，一个极度无聊的89后。他自以为很帅，事实却不如意，他自以为明骚，朋友们都说他闷骚，他是个认真起来银河系都静止的男人，看破红尘却遁不入空门佛门的BUG。</p></div>
+        <div class="column"><p>我是LiinNs，一个奔三的光棍，一个极度无聊的89后。<br/ >他自以为很帅，事实却不如意，他自以为明骚，朋友们都说他闷骚。<br />他是个认真起来银河系都静止的男人，看破红尘却遁不入空门佛门的BUG。</p></div>
+        <!-- 一个高尚的人,一个纯粹的人,一个有道德的人,一个脱离了低级趣味的人,一个有益于人民的人。 -->
         <div class="column">
             <div class="cycle">
                 <a href="/"><img src="/favicon.jpg" title="LiinNs" alt="这是只大型猫科动物！" /></a>
@@ -20,4 +22,5 @@
     host by <a href="https://github.com/LiinNs">Github @LiinNs </a>.
     <a href="/about/">About me.</a>
     </p>
+    </div>
 </footer>
