--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header>
-    <h1><img src="./images/LiinNs.jpg" title="LiinNs,this is a image!" alt="LiinNs" /></h1>
-    <span>临渊羡鱼，不如退而织网!</span>
-    <div class="doodle">
-        <canvas>you should be a doodle!</canvas>
+    <div class="header">
+        <h1><img src="./images/LiinNs.jpg" title="LiinNs,this is a image!" alt="LiinNs" /></h1>
+        <span>临渊羡鱼，不如退而织网!</span>
+        <div class="doodle">
+            <canvas>you should be a doodle!</canvas>
+        </div>
     </div>
 </header>
