--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,10 +10,10 @@
         </div>
         <div class="column">
             <address>
-                <a href="http://weibo.com/Hjax"><img src="" title="这是我的围脖" alt="围脖" /></a><br />
-                <a href="mailto:876056609@qq.com"><img src="" title="这是我的企鹅邮箱" alt="邮箱" /></a><br />
-                蔻蔻:876056609<br />
-                住址:海南省 海口市 美兰区 国兴大道 卧铺！！！
+                <a href="http://weibo.com/Hjax"><i class="icon-user-2" aria-hidden="true"></i>围脖:&nbsp;迭代_林乃胜</a><br />
+                <a href="mailto:876056609@qq.com"><i class="icon-mail" aria-hidden="true"></i>邮箱:&nbsp;876056609@qq.com</a><br />
+                <i class="icon-user" aria-hidden="true"></i>蔻蔻:&nbsp;876056609<br />
+                <i class="icon-location" aria-hidden="true"></i>住址:&nbsp;海南省 海口市 美兰区 国兴大道 卧铺！！！
             </address>
         </div>
     </div>
