--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,13 +13,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 </head>
 <body>
-
-<div class="single-post">
-    <span class="post-meta"><a href="/">{{ site.author }}</a></span>
-    {{ content }}
-</div>
-
-{% include footer.html %}
-
+    {% include header.html %}
+    <div class="container">
+        <div class="content">
+          	<div class="markdown-body">
+          	    {{ content }}
+          	</div>
+        </div>
+    </div>
+    {% include footer.html %}
 </body>
 </html>
