--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,5 +3,5 @@
     <ul>
         <li><a href="/">首页</a></li>
         <li><a href="/about/">关于我</a></li>
-    </ul>
+        <li><a href="/profile/">简历</a></li>
 </nav>
