--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" style="background: no-repeat center -15px/6% url('/assets/images/pikachu-min.png');">
   <div class="content has-text-centered">
     <p>
       Powered by <a href="https://github.com/LiinNs"><strong>LiinNs</strong></a>
