--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,5 +1,6 @@
-<footer class="footer" style="background: no-repeat center -15px/6% url('/assets/images/pikachu-min.png');">
+<footer class="footer">
   <div class="content has-text-centered">
+    <img style="margin:-20px; width:5%;" src="/assets/images/pikachu-min.png"/>
     <p>
       Powered by <a href="https://github.com/LiinNs"><strong>LiinNs</strong></a>
     </p>
