--- a/_layouts/application.html
+++ b/_layouts/application.html
@@ -11,5 +11,6 @@
       </div>
     </section>
     {% include _footer.html %}
+    <script id="dsq-count-scr" src="//liinns.disqus.com/count.js" async></script>
   </body>
 </html>
