--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@
       <div class="container">
         {% include _bread_crumb.html %}
         {{content}}
+        {% include _disqus.html %}
       </div>
     </section>
     {% include _footer.html %}
