--- a/_includes/_disqus.html
+++ b/_includes/_disqus.html
@@ -7,8 +7,9 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = "{{page.url}}";  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "{{{{page.url}}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+var url_as_identifier = "{{site.url}}{{page.url}}";
+this.page.url = url_as_identifier;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = "{{page.url}}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
