fix disqus count

--- a/_includes/_post.html
+++ b/_includes/_post.html
@@ -8,7 +8,7 @@
         </div>
         <nav class="level is-mobile">
             <div class="level-right">
-              <small>@</small> <small>{{ post.date }}</small> <a href="{{post.url}}#disqus_thread"> 去评论</a>
+              <small>@</small> <small>{{ post.date }}</small> <a href="{{site.url}}{{post.url}}#disqus_thread">📩</a>
             </div>
           </nav>
       </div>
