--- a/_includes/_post.html
+++ b/_includes/_post.html
@@ -8,7 +8,7 @@
         </div>
         <nav class="level is-mobile">
             <div class="level-right">
-              <small>@</small> <small>{{ post.date }}</small>&nbsp; <a href="{{site.path}}{{page.url}}#disqus_thread">📩</a>
+              <small>@</small> <small>{{ post.date }}</small>&nbsp; <a href="{{site.path}}{{post.url}}#disqus_thread">📩</a>
             </div>
           </nav>
       </div>
