--- a/_layouts/application.html
+++ b/_layouts/application.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="has-navbar-fixed-top">
   <head>
+    <meta name="google-site-verification" content="WenfVmsvVOdOtlhOrb2wdxJDW99UsJiBe1w-ElBBNzY" />
     {% include _head.html %}
   </head>
   <body>
