--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@
     {% include _nav.html %}
     <section class="section">
       <div class="container">
+        {% assign breadcrumb_string = "/:Home, /page:Posts" %} 
         {% include _bread_crumb.html %}
         {{content}}
         {% include _disqus.html %}
