更新联系方式

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -2,7 +2,7 @@
   <div class="content has-text-centered">
     <img style="margin:-20px; width:80px;" src="/assets/images/pikachu-min.png"/>
     <p>
-      Powered by <a href="https://github.com/LiinNs"><strong>LiinNs</strong></a>
+      Powered by <strong>LiinNs</strong>, <a href="https://github.com/LiinNs">Github</a>, WX: <strong>redhater</strong>
     </p>
   </div>
 </footer>
