--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -8,4 +8,43 @@ body {
       }
     }
   }
+  // POST
+  section.post {
+    h1 {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin: 1rem 0;
+    }
+    h2 {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin: 1rem 0;
+    }
+    h3 {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin: 1rem 0;
+    }
+    h4 {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin: 1rem 0;
+    }
+    h5 {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin: 1rem 0;
+    }
+    h6 {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin: 1rem 0;
+    }
+    div.post_property {
+      padding: 0 0 1rem;
+      span.tag {
+        margin: .5rem 0;
+      }
+    }
+  }
 }
