--- a/_includes/_post.html
+++ b/_includes/_post.html
@@ -3,6 +3,7 @@
       <div class="media-content">
         <div class="content">
           <p>
+            <h3>{{post.title}}</h3>
             {{post.excerpt}}
           </p>
         </div>
