--- a/_includes/_post.html
+++ b/_includes/_post.html
@@ -9,7 +9,13 @@
         </div>
         <nav class="level is-mobile">
             <div class="level-right">
-              <small>@</small> <small>{{ post.date }}</small>&nbsp; <a href="{{site.path}}{{post.url}}#disqus_thread">📩</a>
+                <time>
+                    <span class="icon is-small">
+                      <i class="fas fa-calendar-alt"></i>
+                    </span>
+                    {{ post.date | date: "%a, %Y-%m-%d" }}
+                  </time>
+                &nbsp; <a href="{{site.path}}{{post.url}}#disqus_thread">📩</a>
             </div>
           </nav>
       </div>
